# django-generic-notifications

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: customizing.md  development.md  grouping.md  migrate.md  multilingual.md  performance.md  preferences.md
example/: pyproject.toml
example/config/: asgi.py  middleware.py  settings.py  urls.py  wsgi.py
example/notifications/: admin.py  context_processors.py  types.py  urls.py  views.py
example/notifications/migrations/: 0001_create_default_user.py
example/notifications/templates/: home.html  notifications.html  settings.html
example/notifications/templatetags/: notification_utils.py
example/templates/: base.html
generic_notifications/: __init__.py  channels.py  digest.py  models.py  preferences.py  registry.py  types.py
generic_notifications/management/commands/: send_digest_emails.py  send_notification_digests.py
generic_notifications/migrations/: 0002_alter_disablednotificationtypechannel_id_and_more.py
tests/: settings.py  test_channel_defaults.py  test_channels.py  test_helpers.py  test_management_commands.py  test_models.py  test_performance.py  test_preferences.py  test_registry.py  test_types.py  test_utils.py
